--- a/swapsort_pages.tex
+++ b/swapsort_pages.tex
@@ -68,9 +68,9 @@
 
 \begin{center}
 {
-\setmainfont[Scale=1.65]{Roboto Slab-Bold}
+\setmainfont[Scale=1.58]{Roboto Slab-Bold}
 \Huge
-SWAP SORT
+SWAP MEET
 }
 \end{center}
 
